<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Computer Store App</string>
    <string name="action_settings">Settings</string>
    <string name="computer_title_label">Make</string>
    <string name="computer_title_hint">Make</string>
    <string name="computer_model_label">Model</string>
    <string name="computer_model_hint">Model</string>
    <string name="computer_price_label">Price</string>
    <string name="computer_price_hint">Price</string>
    <string name="computer_quantity_label">Quantity</string>
    <string name="computer_quantity_hint">Quantity</string>
    <string name="computer_os_label">Operating System</string>
    <string name="computer_os_hint">Opertaing System</string>


    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

</resources>
